--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
-aiohttp==3.8.1
-bs4==0.0.1
-requests==2.25.1
-tqdm==4.54.1
-reporters-db==2.0.5
-pathos==0.2.7
-stem==1.8.0
-lxml>=4.6.5
-selenium==4.1.5
-python-anticaptcha==0.7.1
-python-dateutil==2.8.1
-webdriver-manager==3.5.4
+beautifulsoup4>=4.12.2
+lxml>=4.9.0
+requests>=2.31.0
+selenium>=4.0.0
+tqdm>=4.66.4
+python-dateutil>=2.8.2
+reporters-db>=3.2.56
+webdriver-manager>=3.5.4
